--- a/templates/base.html
+++ b/templates/base.html
@@ -1,30 +1,163 @@
 {% load thumbnail %}
 
-{% if messages %}
-    {% for message in messages %}
-        <div class='message-wrapper'>
-            <div class="alert alert-{{ message.tags }}">
-                {{ message|safe }}
-            </div>
-        </div>
-    {% endfor %}
-{% endif %}
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/font/garamond/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/font/monotype/font.css">
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="/static/js/jquery.mousewheel-3.0.6.pack.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-1.9.0.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="/static/js/script.js"></script>
 
-{% for i in photos %}
-    {% thumbnail i.photo "150x150" as im %}
-        <img src="{{ im.url }}" />
-    {% endthumbnail %}
-{% endfor %}
+    <script type="text/javascript" src="/static/source/jquery.fancybox.js?v=2.1.5"></script>
+    <link rel="stylesheet" type="text/css" href="/static/source/jquery.fancybox.css?v=2.1.5" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/static/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
+    <script type="text/javascript" src="/static/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+    <link rel="stylesheet" type="text/css" href="/static/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
+    <script type="text/javascript" src="/static/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+    <script type="text/javascript" src="/static/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
 
-{% for r in reviews %}
-    <p>
-        {{ r.name }}<br />
-        {{ r.message }}
+    <script type="text/javascript">
+        $(document).ready(function () {
+        countdown();   /* вызываем функцию */
+        setInterval(countdown, 1000);   /* даем интервал вызова функции в 1 секунду */
+        });
+    </script>
+</head>
+<body>
+<div id="header-pattern">
+
+    <div id="header-pattern-textblock1">
+        {% if messages %}
+            {% for message in messages %}
+                <p class='message'>{{ message|safe }}</p>
+            {% endfor %}
+        {% endif %}
+    <p id="header-pattern-text1">Свадебный фотограф</p>
+    <p id="header-pattern-text2">Свадебная фото и видеосъемка</p>
+    </div>
+    <p id="header-pattern-textblock3">+7 917-517-80-86</br>
+        Ershov.i.a@gmail.com
     </p>
-{% endfor %}
+    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
+    <div class="yashare-auto-init" id="header-pattern-textblock4" data-yashareL10n="ru" data-yashareType="button" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki"></div>
+    
+    
+    
+    <p id="header-pattern-textblock2">Закажи свадебного фотографа,</br> получи свабедную книгу в ПОДАРОК!!!</p>
+    <div id="counter">
+        <p>до конца акции:</p>
+        <div id="rezult-timer"></div>
+        <div id="counter-info">
+            <p>Дней</p>
+            <p>Часов</p>
+            <p>Минут</p>
+            <p>Секунд</p>
+        </div>
+    </div>
+</div>
+<div style='clear: both'></div>
+<div id="forms-and-photo">
+    <div id="form1">
+        <p class="header-form1">Заполни форму для получения подарка</p>
+        <form id="input-form-all" method='post'>  
+            <p>   Имя {{ reg_form.name }}</p>
+            <p>   Телефон {{ reg_form.phone }}</p>
+            <p>  E-mail {{ reg_form.email }}</p>
+            <input id="submit-form1" type="submit" value="">
+            <input type='hidden' name='action' value='request' />
+            {% csrf_token %}
+        </form>
+        <span id="form1-pattern"> </span>
+    </div>
+</div>
+<div class="text-in-body"><span>Почему клиенты выбирают НАС:</span></div>
+<div id="text-block">
+    <span class="pattern-text-block"></span>
 
-{% include 'request_form.html' %} 
+    <p> - Гарантируем высококлассное качество работы</p>
+    <p>  - Индивидуальный подход</p>
+    <p>  - Предлагаем услуги свадебных фотографов высочайшего класса на любой вкус.</p>
+    <p> - Услуги профессионального визажиста и стилиста</p>
+    <p>  - Используем только профессиональное оборудование!</p>
+    <p> - Доступные цены и скидки</p>
+    <p>  - Различные варианты оплаты</p>
+    <p> - Работаем по договору</p>
 
-{% include 'review_form.html' %} 
+    <span class="pattern-text-block turn" style="margin-top: 10px;"></span>
+</div>
 
-{% include 'call_form.html' %} 
+<div class="text-in-body2"><span>портфолио</span></div>
+
+<div id="portfolio">
+    <span class="portfolio-pattern-left"></span>
+
+    {% for i in photos %}
+        {% thumbnail i.photo "x100" as im %}
+            <a class="fancybox" href="/media/{{ i.photo }}" data-fancybox-group="gallery" title="{{ i.title }}"><img class="portfolio-img" src="{{ im.url }}"></a>
+        {% endthumbnail %}
+    {% endfor %}
+    
+
+    <span class="portfolio-pattern-right turn"></span>
+</div>
+
+<div class="text-in-body2"><span>отзывы</span></div>
+
+<!-- -------------------------ОТЗЫВЫ------------------------ -->
+<div id="feedback">
+    <div id="feedback-left">
+
+        <!--БЛОК ОТЗЫВОВ-->
+    <span id="pattern-feedback-header"></span>
+        
+        {% for r in reviews %}
+            <div class="feedback-block">
+                <div class="feedback-block-image"></div>
+                <div class="feedback-block-text">
+                    <p>{{ r.name }}</p>
+                    <p>{{ r.message }}</p>
+                </div>
+            </div>
+        {% endfor %}
+
+    <span id="pattern-feedback-footer" class="turn"></span>
+        <!--БЛОК ОТЗЫВОВ-->
+    </div>
+    <form id="form2" method='post'>
+        <p class="header-form2">Оставить свой отзыв</p>
+        <p>   Имя {{ review_form.name }}</p>
+        <p>   Телефон {{ review_form.phone }}</p>
+        <p>  E-mail {{ review_form.email }}</p>
+        <p>Сообщение<textarea id="form2-textarea" name='message'></textarea></p>
+        <input id="submit-form2" type="submit" value="">
+        <input type='hidden' name='action' value='review' />
+        {% csrf_token %}
+        <span class="form2-pattern"> </span>
+    </form>
+</div>
+<div style='clear: both'></div>
+<!-- -------------------------ОТЗЫВЫ------------------------ -->
+<div class="text-in-body3"><span></span></div>
+
+<div id="footer">
+    <div id="footer-left"></div>
+    <div id="form3">
+        <p class="header-form3">Заказать обратный звонок</p>
+        <form id="input-form3-all" method='post'>
+            <p>   Имя {{ call_form.name }}</p>
+            <p>   Телефон {{ call_form.phone }}</p>
+            <p>  E-mail {{ call_form.email }}</p>
+            <input id="submit-form3" type="submit" value="">
+            <input type='hidden' name='action' value='call' />
+            {% csrf_token %}
+        </form>
+        <span class="form2-pattern" style="margin-top: 10px;"> </span>
+    </div>
+</div>
+</body>
+</html>
